# argus-backend

./: .gitignore  .scalafmt.conf  BUILD.bazel  Dockerfile.api  Dockerfile.ingestor  Dockerfile.processor  MODULE.bazel  README.md  WORKSPACE  build-and-load-images.sh  build.sbt
.github/workflows/: build-publish.yaml
api/: BUILD.bazel  build.sbt
api/src/main/scala/: ApiRoutes.scala  ApiServer.scala  DbClient.scala  Main.scala  Metrics.scala
bazel/: multiarch.bzl  scalafmt.bzl
common/: BUILD.bazel
common/src/main/scala/: KafkaMessages.scala
deploy/compose/: docker-compose.yaml
deploy/helm/: .helmignore  Chart.yaml  values.yaml
deploy/helm/charts/: kafka-26.3.2.tgz
deploy/helm/templates/: api.yaml  broker.yaml  db-init-configmap.yaml  db-pvc.yaml  db.yaml  ingestor.yaml  processor.yaml
infra/: create-db.sql  docker-compose.yaml
ingestor/: BUILD.bazel
ingestor/src/main/scala/: ArgusRoutes.scala  ArgusServer.scala  Ingest.scala  KafkaClient.scala  Main.scala
processor/: BUILD.bazel
processor/src/main/resources/: logback.xml
processor/src/main/scala/: DbClient.scala  Handler.scala  KafkaClient.scala  Main.scala
project/: plugins.sbt
