load("//:bazel/scalafmt.bzl", "scala_library")

scala_library(
    name = "common",
    srcs = glob(["src/main/scala/**/*.scala"]),
    format = True,
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_chuusai_shapeless_2_13",
        "@maven//:io_circe_circe_core_2_13",
        "@maven//:io_circe_circe_generic_2_13",
        "@maven//:io_circe_circe_parser_2_13",
        "@maven//:org_tpolecat_doobie_core_2_13",
        "@maven//:org_tpolecat_doobie_postgres_2_13",
        "@maven//:org_tpolecat_typename_2_13",
        "@maven//:org_typelevel_cats_core_2_13",
        "@maven//:org_typelevel_cats_effect_2_13",
        "@maven//:org_typelevel_cats_effect_kernel_2_13",
        "@maven//:org_typelevel_cats_effect_std_2_13",
        "@maven//:org_typelevel_cats_kernel_2_13",
    ],
)
